--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -56,7 +56,7 @@ hidden: false
     ```
   >建议将外挂的链接脚本全部重新复制一份到本地进行引用，防止链接失效导致效果丢失 
 
-  重新部署后即可看到效果。  
+  重新部署后即可看到效果。`当前效果存在一些适配问题，慎用！`
   {% btn 'https://zsyyblog.com/f050230c.html',查看原文,,block right outline %}  
   
 <!-- endtab -->    
