edit theme change

--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -435,18 +435,28 @@ hidden: false
 
 {% btn 'https://blog.leonus.cn/2023/butterflyTag-1.html',查看原文,,block right outline %}  
 
-<!-- endtab -->
+<!-- endtab -->  
+
+<!-- tab 关于页面 -->
+这篇教程有一个关于颜色脚本`color.css`的坑，填坑过程有空再补...施工中🚀
+{% btn 'https://opeach.cn/posts/dab4.html',查看原文,,block right outline %}
+<!-- endtab -->  
 
 {% endtabs %}  
 
 
 
 
-## 插件使用
-- [首页置顶轮播插件](https://akilar.top/posts/8e1264d1/)
-- [统计图表插件](https://guole.fun/posts/18158/)
-- [豆瓣个人页面](https://github.com/mythsman/hexo-douban)
-- [豆瓣Card](https://github.com/TankNee/hexo-douban-card)
+## 插件使用  
+| 插件名称 | 版本 | 作用 |
+| :------: | :----------: | :----------: |
+| hexo-swiper-bar | 1.1.1 | [文章首页置顶](https://zfe.space/post/hexo-swiper.html) |
+| hexo-butterfly-charts | 1.1.3 | [统计图表](https://guole.fun/posts/18158/) |
+| hexo-douban | 2.1.7 | [豆瓣个人页面](https://github.com/mythsman/hexo-douban) |
+| hexo-douban-card | 1.4.0 | [在文章中插入豆瓣卡片](https://github.com/TankNee/hexo-douban-card) |
+| hexo-abbrlink | 2.2.1 | 为文章生成字母和数字组成的唯一ID,代替默认的日期生成 |
+
+
 
 
 
