--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -455,6 +455,8 @@ hidden: false
 | hexo-butterfly-charts | 1.1.3 | [统计图表](https://guole.fun/posts/18158/) |
 | hexo-douban | 2.1.7 | [豆瓣个人页面](https://github.com/mythsman/hexo-douban) |
 | hexo-douban-card | 1.4.0 | [在文章中插入豆瓣卡片](https://github.com/TankNee/hexo-douban-card) |
+| hexo-tag-steamgame | 1.0.0 | [在文章中插入steam游戏](https://github.com/HCLonely/hexo-tag-steamgame) |
+| hexo-steam-games | 1.3.2 | [生成steam游戏库页面](https://github.com/HCLonely/hexo-steam-games) |
 
 
 
