--- a/source/_posts/游戏解析之《艾尔登法环》.md
+++ b/source/_posts/游戏解析之《艾尔登法环》.md
@@ -2,8 +2,10 @@
 title: 游戏解析之《艾尔登法环》
 abbrlink: 41b229dc
 date: 2023-05-17 11:15:47
-tags:
+tags: 
+    - 游戏
 categories:
+    - 游戏解析
 description:
 cover: https://cdn.akamai.steamstatic.com/steam/apps/1245620/header.jpg?t=1683618443
 ---
