renew 游戏制作之旅

--- a/source/_posts/妙趣横生的游戏制作之旅.md
+++ b/source/_posts/妙趣横生的游戏制作之旅.md
@@ -16,7 +16,7 @@ cover: /img/妙趣横生的游戏制作之旅/1684237361007.png
 
 {% douban book 36078032 %}
 
-## 第 1 阶段 构思
+## 第 1 阶段  构思
 
 ### 奇思妙想
 
@@ -109,3 +109,160 @@ cover: /img/妙趣横生的游戏制作之旅/1684237361007.png
 |调研笔记|构思阶段过程中|
 |游戏原型|构思阶段过程中|
 |项目目标|构思阶段的结尾|
+
+
+## 第 2 阶段  预制作
+
+### 垂直切片
+
+垂直切片是游戏的高质量演示小样，包含游戏设计、图形、音频设计、操控方案、视觉效果及其所有元素的品质都打磨得足够优质。
+
+电子游戏的垂直切片包括对整个游戏体验至关重要的所有（或大部分）核心功能、资源和叙事的样本。这是我们游戏设计的横截面快照，并演示了我们计划制作的游戏类型。
+![Alt text](../img/%E5%A6%99%E8%B6%A3%E6%A8%AA%E7%94%9F%E7%9A%84%E6%B8%B8%E6%88%8F%E5%88%B6%E4%BD%9C%E4%B9%8B%E6%97%85/weread_image_1347247751620986.jpeg)
+
+#### 核心循环
+
+主要是指可重复构建的玩法模式。通过游戏设计师与玩家之间的合作，在这种潜在的可重复模式之上建立无穷无尽的变化。设计师呈现出不断变化的游戏元素组合，玩家可以自由地以多种不同的方式触达游戏的每个部分。
+
+垂直切片将至少包括代表游戏核心循环的一个部分，并展示我们在玩游戏的大部分时间中将拥有的体验类型。
+
+在垂直切片中，我们还应该尝试展示一些代表游戏中`特殊序列`的内容：极具挑战性的，具有数量惊人的特殊任务和特定时刻。
+
+#### 3C
+
+- 角色（Character）
+- 相机（Camera）
+- 操控 （Control）
+
+#### 关卡白盒
+
+垂直切片中还将包括游戏的一个或多个示例关卡（场景），以便我们有一个可以玩的地方，并且可以了解最终游戏的外观和声音。
+
+迭代流程：
+![Alt text](../img/%E5%A6%99%E8%B6%A3%E6%A8%AA%E7%94%9F%E7%9A%84%E6%B8%B8%E6%88%8F%E5%88%B6%E4%BD%9C%E4%B9%8B%E6%97%85/weread_image_1347262975768901.jpeg)
+
+关卡设计相关资源推荐：
+
+- GDC Vault(gdcvault.com) 上搜索“level design workshop”
+- 书籍《An Architectural Approach to Level Design》 Christopher W. Totten著
+- 书籍《通关！游戏设计之道》（Level UP! The Guide to Great Video Game Design） Scott Rogers著
+- 书籍《建筑师成长记录：学习建筑的101点体会》 Matthew Frederick著
+
+#### 美丽角落
+一个美丽的角落是关卡的一部分，足以填满玩家的电脑屏幕，其中的美术效果和音频已经过打磨，看起来和听起来都与最终游戏中的效果一样好。
+
+![Alt text](../img/%E5%A6%99%E8%B6%A3%E6%A8%AA%E7%94%9F%E7%9A%84%E6%B8%B8%E6%88%8F%E5%88%B6%E4%BD%9C%E4%B9%8B%E6%97%85/weread_image_1347556341010002.jpeg)
+
+使用美丽角落、补充概念电影和其他演示材料来可视化游戏体验，可以作为对垂直切片的一种灵活的思考方式。
+
+### 试玩测试
+
+#### 游戏设计师模型、系统映像和用户模型
+该概念出自书籍《日常物的设计》（The Design of Everyday Things）Donald A. Norman著，国内翻译本为《设计心理学》。
+
+- `游戏设计师模型`：指游戏设计师在他们的脑海中如何看待游戏（或其他类型的交互系统）。它是“游戏设计师对产品外观、感觉和操作的概念”。
+- `系统映像`：指游戏实际呈现给玩家的方式。“系统映像是可以从已构建的物理结构（包括文档）中得出的”。
+- `用户模型`：指玩家头脑中发生的事情。“用户的心智模型是通过与产品和系统图像的交互来开发的”。
+
+“游戏设计师希望用户模型与他们自己的模型相同，但由于他们无法直接与用户交流，因此交流的重点在于系统映像。”
+
+游戏和故事中的概念和机制通常是复杂而抽象的，很难以可靠的方式将它们传达给玩家。如果使用间接沟通方法，会使情况情况变得更具挑战性。
+
+为了解决这些问题，我们不得不通过多个渠道同时向玩家传达相同的概念：系统的外观、元素的形状和颜色、我们看到它在做什么、我们通过文本或语音明确表达的内容，以及我们设置的训练序列。我们必须将所传递的信息分层，进行`冗余通信`（一次通过多个渠道传达同一件事），直到每个玩游戏的人都能得到它。
+
+#### 功能可见性和语义符号
+
+功能可见性的概念出自书籍《视知觉生态论》（The Ecological Approach to Visual Perception） James J. Gibson著。
+
+Donald A. Norman将这个想法提炼成一种功能可见性理论，它“定义了哪些行为是可能的”，以及语义符号，它“指出了人们如何发现这些可能性：语义符号是信号，是可以做什么的可感知信号。”
+
+#### 试玩测试的最佳实践
+
+- 在测试之前和测试期间尽量减少与游戏测试者的对话
+- 让游戏测试者和游戏设计师都是用耳机
+- 如有必要，准备一份操控备忘单
+- 准备书面提示或帮助，让玩家了解任何已知的游戏或功能问题
+- 建议测试者放声思考和感受
+- 适当使用内容警告
+- 观察玩家的游戏体验
+- 观察测试者的所作所为并记下所有内容
+- 完全不要帮助你的测试者
+- 关注时间
+- 游戏测试结束后，进行`试玩后访谈`
+  - 你最喜欢的时刻或互动是什么？
+  - 你最不喜欢的时刻或互动是什么？
+  - 你觉得自己最聪明的时刻？
+  - 有没有你想做而游戏不允许你做的事情？
+  - 如果你有一根魔杖并且可以改变游戏的任何方面或你的体验，那会是什么？假设你有无限的预算和时间。
+- 不要成为游戏解释者
+- 不要气馁
+
+#### 评估试玩测试反馈
+
+- 观看和聆听
+- 写下所有内容
+认真对待反馈——不要防御，也不要太快忽略
+- 反馈能否可以轻松`归类`为
+  - 严重毁坏：必须修复
+  - 问题：可能修复
+  - 建议：一个新想法
+- 计划修复必须修复的问题
+- 调查可能的修复并评估新想法，检查项目目标
+- 仔细解读玩家所说的话，将你看到的他们在游戏中的行为作为指导
+- 与合作者讨论反馈
+
+#### 反馈小技巧
+
+“我喜欢，我希望，如果......”
+
+- 通过“我喜欢”，展示对这项工作的欣赏。
+- 通过“我希望”，表达一些具有建设性的批评意见。
+- 最后，用“如果......”，提供一个可能实现愿望的想法，给予建设性的反馈意见。
+
+不管结果如何，“如果......”是总结特定反馈的好方法；它为讨论对话开辟了空间，因为它会很自然地邀请设计师为收到地反馈提供回应。
+
+### 同心开发
+
+同心意味着从中心开始，向外扩展到围绕并且支持该中心的事物。
+
+当我们进行同心开发时，我们将首先建造主楼，以确保我们有值得周围事物支持的东西。这意味着首先实现游戏的基本元素并对其进行处理，直到它们完成。这些基本元素有时被开发人员成为游戏的主要机制。
+
+![Alt text](../img/%E5%A6%99%E8%B6%A3%E6%A8%AA%E7%94%9F%E7%9A%84%E6%B8%B8%E6%88%8F%E5%88%B6%E4%BD%9C%E4%B9%8B%E6%97%85/weread_image_1365953012850424.jpeg)
+
+#### 首先实现基础机制，直到它们完成
+
+- 在第一人称游戏中，移动和相机控制
+- 在横板卷轴的点击式冒险游戏中，移动玩家角色和相机的算法
+- 在第三人称动作游戏中，移动玩家角色和相机控制
+......
+- 在文字冒险游戏中，文本解析器的基础功能
+
+同心开发哲学的核心是，我们不只是将这些基础机制拼凑在一起，就像我们在原型制作时所作的那样，而是会花时间来努力改善它们，直到它们成为完整的和优雅的。这意味着创造最终版本的艺术、动画、声音效果和视觉效果，并将它们与良好的游戏设计和代码结合在一起。
+
+使用同心开发，我们`不会在基础机制已经完成并打磨到了一个很好的程度之前，开始实现任何的二级机制`。
+
+
+#### 实现二级和三级机制
+
+二级机制是游戏中一两个最重要的玩家活动或动词，通常是这些动词完成游戏的核心循环。对于具有玩家角色的游戏，最常见的是：
+
+- 在关于漫游的游戏中，跳跃和攀爬
+- 在关于战斗的游戏中，主要战斗动作
+- 在叙事游戏中，与其他角色交谈
+
+我们实现每个二级机制，进行迭代，并完成所有相关的美术、动画 、音效设计、视觉效果、控制和算法，打磨它们，直到达到可以发布的水平。我们以这种方式处理每个二级机制，一次一个，直到它们全部完成。然后我们可以继续实现和迭代我们的三级机制。
+
+这些三级机制将构成我们的游戏机制的“下一层”。它们通常以某种方式依赖于基础机制和二级机制，并且充实了游戏的设计。
+
+#### 设计参数
+
+简单来说就是各项规格参数，决定其基本属性的参数值，必须在继续构建我们希望的游戏最终关卡之前牢牢锁定。
+
+
+#### 测试关卡
+
+在制作垂直切片时，用测试关卡来微调和确认游戏的设计参数
+
+### 游戏设计宏观方案
+
+### 进度表
