--- a/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
+++ b/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
@@ -12,15 +12,13 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ---
 
 
-## 设计目的
 
 > 如何做出这么一个开放世界，既让玩家有绝对的探索自由度，又能引导他们前往关键地点触发剧情？
 
 ![Alt text](../img/%E4%BB%BB%E5%A4%A9%E5%A0%82%E5%A6%82%E4%BD%95%E8%A7%A3%E5%86%B3%E5%A1%9E%E5%B0%94%E8%BE%BE%E7%9A%84%E5%BC%80%E6%94%BE%E4%B8%96%E7%95%8C%E9%97%AE%E9%A2%98/1687224332681.png)
 
-## 设计方案
 
-### “点与线”系统
+## “点与线”系统
 
 “点”是指希卡塔，耸立于地面之上，巨大且有着霓虹灯尖顶。从远处眺望也清晰可见，而且还可以给玩家带来好处，即登顶便可获取周边区块地图。
 
@@ -37,7 +35,7 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ![Alt text](../img/%E4%BB%BB%E5%A4%A9%E5%A0%82%E5%A6%82%E4%BD%95%E8%A7%A3%E5%86%B3%E5%A1%9E%E5%B0%94%E8%BE%BE%E7%9A%84%E5%BC%80%E6%94%BE%E4%B8%96%E7%95%8C%E9%97%AE%E9%A2%98/1687225090507.png)
 
 
-### 地标系统
+## 地标系统
 
 与其推动玩家始终沿塔行进，任天堂利用大量地标与兴趣点吸引玩家在地图上随意奔赴，比如神庙、驿站、敌人营地，他们只需找到方法来吸引玩家朝着这些地点靠拢便可，就像飞蛾本能扑向火焰。
 
@@ -61,7 +59,7 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 
 但当玩家目之所及仅有一两座希卡塔时，那周边就会显得有特别多的小地标。一个开放世界游戏选项过多的话，容易导致玩家不知所措。
 
-### 三角法则
+## 三角法则
 
 任天堂以三角形设计了海拉鲁的大部分地形和景观，到处都是如金字塔或呈锥形的小丘、山脉、岩石。
 ![Alt text](../img/%E4%BB%BB%E5%A4%A9%E5%A0%82%E5%A6%82%E4%BD%95%E8%A7%A3%E5%86%B3%E5%A1%9E%E5%B0%94%E8%BE%BE%E7%9A%84%E5%BC%80%E6%94%BE%E4%B8%96%E7%95%8C%E9%97%AE%E9%A2%98/1687226503322.png)
@@ -79,7 +77,7 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ![Alt text](../img/%E4%BB%BB%E5%A4%A9%E5%A0%82%E5%A6%82%E4%BD%95%E8%A7%A3%E5%86%B3%E5%A1%9E%E5%B0%94%E8%BE%BE%E7%9A%84%E5%BC%80%E6%94%BE%E4%B8%96%E7%95%8C%E9%97%AE%E9%A2%98/1687227748307.png)
 
 
-### 地标面包屑
+## 地标面包屑
 
 新地点的出现源源不断地制造着惊喜和好奇。也许你朝着一个地标前进的同时，还会顺路发现两三个新地点。可能是地平线上的一座神庙，或是转角处的敌人营地；也许是奇岩怪石，或是峰峦奇景。不管你去哪里，无论你做什么，都会有事物吸引你的眼球，说不定某个新地标激起你的兴趣，你就会改变计划、更换目的地。结束之后，你就会想起原来的计划，然后...再次被吸引走。
 
@@ -96,7 +94,7 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ![Alt text](../img/%E4%BB%BB%E5%A4%A9%E5%A0%82%E5%A6%82%E4%BD%95%E8%A7%A3%E5%86%B3%E5%A1%9E%E5%B0%94%E8%BE%BE%E7%9A%84%E5%BC%80%E6%94%BE%E4%B8%96%E7%95%8C%E9%97%AE%E9%A2%98/1687229347015.png)
 
 
-## 结论
+`-- 效果 --`
 
 新的测试热图：80比20地尴尬分流不复存在
 
@@ -108,4 +106,4 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ---
 
 🪶资料来源：
-{% youtube CZzcVs8tNfE %}
+[《How Nintendo Solved Zelda's Open World Problem》](https://www.youtube.com/watch?v=CZzcVs8tNfE)
