--- a/source/_posts/2022年度个人总结.md
+++ b/source/_posts/2022年度个人总结.md
@@ -12,16 +12,102 @@ cover:
 
 >无所作为，则人生太长；欲有所为，则人生太短。
 
+这是一篇迟来的年度总结，每每提笔之时，内心便五味杂陈。
+
+原本想着尽情宣泄过去一年中遭遇的种种不满，只是转念一想，生活哪有一帆风顺的，这里免去吐槽，细数收获，为下一年的计划开展努力准备着。
+
 ## 工作
 
-填坑中...🚀
+应前辈的邀约，我从上家公司离职去往他所主导的项目组。起初如他和我所想的一样，项目在不断地迭代中开始变得越来越好，而我也当上“主策”，在职业的道路上顺利的上升了一个台阶。只是自下半年各种人事变动后，项目一波三折，最终草草收场。
+
+在这一年的工作中，我开始明白：
+- 你必须清楚且坚定项目的方向，这是游戏是否能做出来的关键点。
+- 行动本身比行动计划更重要，东西只有做出来，让别人看得见摸得着，它才是有意义的。
+- 所谓规范，需因团队而异，因事情而行。一味的主张合乎规范，犹如给他人套上枷锁。
+- 在游戏这个行业，经验是永远不够用的，需要与时俱进地不断学习，才能帮助团队全力以赴。
+
+我学会了：
+- 战斗系统相关的底层设计
+- 结构化的拆解游戏底层系统
+- 项目研发的不同阶段所需的不同标准
+- 游戏商业化的设计实现
+- 项目研发管理的新方式（故事结构、燃尽图）
+
 
 ## 生活
 
-填坑中...🚀
+### 一只叫“讯号”的小猫
+
+今年最大的收获是我终于有猫了！它叫“讯号”，是我领养的一只漂亮且乖巧的长毛大狸花。我和女朋友都非常地喜欢它。
+
+2022/06/05，下午刚下完小雨，天气阴凉。在住处附近的一家宠物医院，从救助人手里接过了小讯号。刚开始的体检一切顺利，正准备回家时，它却突然尿血而不得不住院治疗，紧张的同时稍微松了口气，还好发现及时，后面几天的治疗一切顺利。虽然前后断断续续花了好久才得以痊愈，但那段时间真的挺开心的，家庭成员从此多了一位毛茸茸的小家伙，就真的挺治愈的。
+
+{% gallery false,400,10 %}
+![第一次到家的小讯号，看上去很凶，但其实是个粘人的小猫猫](../img/2022%E5%B9%B4%E5%BA%A6%E4%B8%AA%E4%BA%BA%E6%80%BB%E7%BB%93/1687341751985.png)
+{% endgallery %}
+
+### 游戏
+
+|游戏|进度|心得概要|
+|:---:|:---:|:---:|
+|《艾尔登法环》|一周目通关|年度最佳游戏！开放世界的设计不算优秀，但装备·技能·道具的战斗乘法组合，使得玩法方式千变万化，内容大有可玩~ 故事和美术设定也十分精彩。
+|《异度之刃3》|未通关|完全是冲着2代的情怀买的，听说故事和音乐一如既往的很棒，但是前期节奏比较拖沓（也许是我比较沉不下心去享受），且角色设定也没有2代那么吸引人，放下就很难再拿起来玩了。|
+|《猎天使魔女3》|未通关|很不错的动作游戏呢，只是连续高强度的战斗操作还是会让人有些吃不消，抽个空补完。|
+|《HELLDIVERS》|587h|工作需要，也确实好玩，但门槛很高，需要朋友。|
+
+
+今年游戏玩的不多，也没有深入的分析。后面还是要养成良好的习惯，定期分析和总结。
+
+
+
+
+
+### 影视
+
+- 《赛博朋克：边缘行者》
+
+游戏《赛博朋克2077》的定制剧，扳机社制作。一开始并未抱着很高的期待观看，毕竟该游戏的市场表现在前。然而，画面表现水准和剧情节奏意外地很棒，看完后久久让人回味，播出后也给游戏带来了一波不小的热度。算是今年看过的个人最喜欢的一部作品了。
+
+{% douban movie 35118256 %}
+
+- 《万神殿 第一季》
+
+故事里的一些设定即科幻又现实，十分吸引眼球。故事本身又具备遐想和哲学讨论的空间，属于创意型的剧作了。这类作品相较边缘行者而言，比较挑人，个人还是非常喜欢的。
+
+{% douban movie 34990593 %}
+
+
+### 书籍
+
+今年看完了：
+
+- 《游戏设计艺术》
+
+{% douban book 26791007 %}
+
+- 《任天堂的体验设计》
+
+{% douban book 35643201 %}
+
+今年的工作任务繁重，都没多少精力和时间完整看完一本书。这两本还是勉强抽空看完的（cry，对于游戏设计这一块的提升帮助还是有的。后面需要找个时间补上读书笔记，巩固一下知识点...这里先挖个坑，择日再填。
+
+
+### 旅行
+
+今年去了：
+
+- 浙江·宁波
+
+✨ 开启一份新工作前的温泉之旅
+
+- 江苏·苏州
+- 江苏·杭州
+
+✨ 陪姥姥和姥爷第一次在上海周边游玩
+
 
 ## 2023年目标
 - [ ] 读完至少`两本`游戏设计相关`书籍`，并记录相关笔记
 - [ ] 完整拆解至少`一款`游戏的玩法`设计`，包含年度最佳游戏
-- [ ] 掌握UE5，并至少做出`一个玩法原型`
+- [ ] 熟练掌握UE5，并至少做出`一个玩法原型`
 
