--- a/source/_posts/妙趣横生的游戏制作之旅.md
+++ b/source/_posts/妙趣横生的游戏制作之旅.md
@@ -82,7 +82,13 @@ cover: /img/妙趣横生的游戏制作之旅/1684237361007.png
 
 项目目标的两种类型：
 - `体验目标`
-  - 希望玩家获得的体验，通常以情感来描述。
+  - 情感体验：具体情感描述可参照情绪之轮 
+  {% gallery false,500,10 %}
+  ![Alt text](../img/%E5%A6%99%E8%B6%A3%E6%A8%AA%E7%94%9F%E7%9A%84%E6%B8%B8%E6%88%8F%E5%88%B6%E4%BD%9C%E4%B9%8B%E6%97%85/weread_image_291652802540913.jpeg)
+  {% endgallery %}
+
+  - 知觉体验：人体五感
+  - 社交体验：对于大型多人在线游戏而言，这部分的体验目标很重要
 - `设计目标`
   - 运行游戏的硬件
   - 游戏机制、动词和玩家活动
