--- a/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
+++ b/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
@@ -106,4 +106,4 @@ cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ---
 
 🪶资料来源：
-[《How Nintendo Solved Zelda's Open World Problem》](https://www.youtube.com/watch?v=CZzcVs8tNfE)
+[How Nintendo Solved Zelda's Open World Problem](https://www.youtube.com/watch?v=CZzcVs8tNfE)
