--- a/source/_posts/战斗设计之经验谈01.md
+++ b/source/_posts/战斗设计之经验谈01.md
@@ -41,7 +41,17 @@ date: 2023-06-26 10:43:47
 
 ## 战斗玩法设计的思考
 
-由于游戏品类众多，各战斗玩法层出不穷，不便在这里一一列举探讨，仅以我个人的偏好说说我个人觉得好玩的战斗设计。
+"战斗玩法设计"是指在电子游戏或其他相关娱乐产品中，针对战斗或战斗系统的设计过程和方法。它包括游戏中的战斗机制、战斗规则、技能系统、武器装备、角色能力等方面的设计。
+
+战斗玩法设计的目的是为了提供给玩家有趣、挑战性和令人满足的战斗体验。这需要考虑到玩家的参与感、游戏平衡性、战斗策略、动作操作、反应速度以及角色成长等方面的因素。
+
+在战斗玩法设计中，开发者通常会设计不同的战斗模式或游戏关卡，提供多样化的敌对NPC或其他玩家对战的机会。他们会考虑角色的技能树和能力升级系统，以便玩家可以在游戏的进程中逐渐解锁更多强大的技能和装备，从而提升战斗的效果和乐趣。
+
+战斗玩法设计还需要平衡不同的角色和武器之间的能力，以确保游戏中的战斗是公平且有挑战性的。开发者还可能会加入一些战斗机制，如特殊技能、连击系统、躲避机制等，以增加游戏的深度和战斗的策略性。
+
+总而言之，战斗玩法设计是游戏开发中关键的一部分，它旨在为玩家提供丰富、刺激和令人满足的战斗体验，以增加游戏的乐趣和可玩性。
+
+不过由于游戏品类众多，各战斗玩法层出不穷，无法以一个设计涵盖整个品类，这里仅以我个人的偏好说说我个人觉得好玩的战斗设计。
 
 ### 战斗手感
 
@@ -51,14 +61,15 @@ date: 2023-06-26 10:43:47
 - 连贯的行为过渡
 - 符合预期的视效与音效
 
-### 战斗节奏
+### 战斗节奏及策略
 
 我喜欢有节奏感的战斗设计，它有着以下几个特点：
 
 - 小技能与大技能的规律释放
 - 技能招式的各种连段
 - 战斗资源的不断循环
-- 战斗与关卡（场景、怪物）的实时交互反馈
+- 存在战斗谜题与解
+- 战斗与关卡实时交互反馈
 
 ### 战斗故事
 
@@ -87,7 +98,7 @@ date: 2023-06-26 10:43:47
 - 符合情绪的场景
 - 动人的音乐
 
-
+以上每一点的设计都足够拿出来写个长篇细说了，后面有时间再来填这个坑。
 
 
 
