--- a/source/_posts/战斗设计之经验谈01.md
+++ b/source/_posts/战斗设计之经验谈01.md
@@ -124,5 +124,5 @@ date: 2023-06-26 10:43:47
 
 ## 总结
 
-所谓战斗设计，更多的是一种艺术表达，而表达的方式远不止一种，适合项目的才是最好的。而从那些方面去设计去表达，这个就见仁见智了。
+所谓战斗设计，更多的是一种艺术表达，而表达的方式远不止一种，适合项目的才是最好的。而从哪些方面去设计与表达，这个就见仁见智了。
 
