edit index view

--- a/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
+++ b/source/_posts/任天堂如何解决塞尔达的开放世界问题.md
@@ -7,7 +7,7 @@ categories:
   - 游戏设计
 abbrlink: 6048a2bd
 date: 2023-06-02 21:15:21
-description: 《塞尔达传说之旷野之息》的设计经验
+description: 
 cover: /img/任天堂如何解决塞尔达的开放世界问题/cover.png
 ---
 
