--- a/source/_posts/关卡设计之经验谈01.md
+++ b/source/_posts/关卡设计之经验谈01.md
@@ -8,7 +8,7 @@ categories:
   - 游戏设计
 abbrlink: 96253f08
 date: 2023-06-23 09:53:54
-description: 为游戏世界添砖加瓦
+description: 
 cover: /img/关卡设计之经验谈01/cover.png
 ---
 
