--- a/source/_posts/关卡设计之创意玩法-神角技巧.md
+++ b/source/_posts/关卡设计之创意玩法-神角技巧.md
@@ -8,7 +8,7 @@ categories:
   - 游戏设计
 abbrlink: e184f650
 date: 2023-07-03 11:57:27
-description:
+description: 此为还在神角技巧项目组是的一些设计灵感文档整理，大部分已经落地到游戏中，作为开放世界小玩法的关卡内容。
 cover: /img/关卡设计之创意玩法-神角技巧/cover.png
 ---
 > 此为还在神角技巧项目组是的一些设计灵感文档整理，大部分已经落地到游戏中，作为开放世界小玩法的关卡内容。
