add:Game Ability System

--- a/source/_posts/妙趣横生的游戏制作之旅.md
+++ b/source/_posts/妙趣横生的游戏制作之旅.md
@@ -11,6 +11,9 @@ description: >-
 abbrlink: bfd75427
 date: 2023-05-16 19:35:19
 cover: /img/妙趣横生的游戏制作之旅/1684237361007.png
+swiper_index: 1
+swiper_desc: 推荐给每一个从事于游戏研发的人
+swiper_cover: /img/妙趣横生的游戏制作之旅/cover.png
 ---
 > 《妙趣横生的游戏制作之旅》由传奇设计师 Richard Lemarchand撰写，别处心裁地将游戏设计的创意方面与有效项目管理的成熟技术联系起来，旨在向游戏设计师、有抱负的游戏开发人员和游戏设计专业的学生传授如何从头至尾完成一个数字游戏项目，从概念化和设计到构建、游戏测试和迭代，以及如何避免游戏制作过程中常见的棘手问题和不受控制的过度行为。
 
