add:指定页跳转功能和标签页美化

--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -442,6 +442,349 @@ hidden: false
 {% btn 'https://opeach.cn/posts/dab4.html',查看原文,,block right outline %}
 <!-- endtab -->  
 
+
+<!-- tab 标签页面美化 -->
+
+1. 标签增加上下标，用于显示标签数量
+
+- 修改`[blogRoot]/themes/butterfly/scripts/helpers/page.js`第49行内容：
+```diff
+    ···
+
+  const length = sizes.length - 1
+  source.sort(orderby, order).forEach(tag => {
+    const ratio = length ? sizes.indexOf(tag.length) / length : 0
+    const size = minfontsize + ((maxfontsize - minfontsize) * ratio)
+    let style = `font-size: ${parseFloat(size.toFixed(2))}${unit};`
+    const color = 'rgb(' + Math.floor(Math.random() * 201) + ', ' + Math.floor(Math.random() * 201) + ', ' + Math.floor(Math.random() * 201) + ')' // 0,0,0 -> 200,200,200
+    style += ` color: ${color}`
+-   result += `<a href="${env.url_for(tag.path)}" style="${style}">${tag.name}</a>`
++    result += `<a href="${env.url_for(tag.path)}" style="${style}">${tag.name}<sup>${tag.length}</sup></a>`
+  })
+  return result
+})
+
+    ···
+```
+
+2. 新建`[blogRoot]/source/css/tag_page.css`，添加如下内容：
+```css
+#page .tag-cloud-list {
+    margin: 5em 0 3em;
+}
+#page .tag-cloud-list a {
+    display: inline-flex;
+    color: var(--icat-fontcolor) !important;
+    font-size: 1.2em !important;
+    padding: 0.2em 0.5em;
+    background: var(--icat-card-bg);
+    margin: 0.5em 0.5em;
+    border-radius: 12px;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;
+    border: var(--style-border-always);
+    box-shadow: var(--icat-shadow-border);
+    align-items: center;
+}
+#page .tag-cloud-list a:before {
+    color: var(--icat-fontcolor) !important;
+    cursor: pointer;
+    content: "\e038" !important;
+    font-family: "iconfont" !important;
+    opacity: 0.4;
+    padding-top: 2px;
+    padding-right: 2px;
+}
+#page .tag-cloud-list a:hover {
+    background: var(--icat-blue);
+}
+#page .tag-cloud-list a > sup{
+    top: auto;
+    background: var(--icat-secondbg);
+    padding: 4px 4px;
+    margin-left: 8px;
+    border-radius: 6px;
+    color: var(--icat-secondtext);
+    line-height: 1;
+    text-align: center;
+    min-width: 35px;
+    display: inline-block;
+    font-size: 1rem;
+    box-shadow: var(--icat-shadow-border);
+}
+
+/* 标签页样式 */
+
+```
+3. 在主题的config文件中引用 `tag_page.css` 。
+
+4. 执行三连
+```shell
+hexo clean && hexo g && hexo s
+```
+
+
+{% btn 'https://meuicat.com/blog/38/',查看原文,,block right outline %}
+
+<!-- endtab --> 
+
+
+<!-- tab 跳转到指定页 -->
+
+> 此效果与` _config.butterfly.yml` 里功能字段配置 `pangu(中英文之间添加空格)` 冲突，若想要正确显示，请填写配置 `enable:false` ，关闭 `pangu`。
+
+1. 修改`[blogRoot]/themes/butterfly/layout/includes/pagination.pug`
+```diff
+  ···
+
+  var options = {
+    prev_text: '<i class="fas fa-chevron-left fa-fw"></i>',
+    next_text: '<i class="fas fa-chevron-right fa-fw"></i>',
+    mid_size: 1,
+    escape: false
+  }
++  var icat_options = {
++    prev_text: '<i class="iconfont icat-chevron-left fa-fw"></i><div class="pagination_tips_prev">上页</div>',
++    next_text: '<div class="pagination_tips_next">下页</div><i class="iconfont icat-chevron-right fa-fw"></i>',
++    mid_size: 1,
++    escape: false
++  }
+
+if is_post()
+  - let prev = theme.post_pagination === 1 ? page.prev : page.next
+  - let next = theme.post_pagination === 1 ? page.next : page.prev
+  nav#pagination.pagination-post
+    if(prev)
+      - var hasPageNext = next ? 'pull-left' : 'pull-full'
+      .prev-post(class=hasPageNext)
+        a(href=url_for(prev.path) title=prev.title)
+          if prev.cover_type === 'img'
+            img.cover(src=url_for(prev.cover) onerror=`onerror=null;src='${url_for(theme.error_img.post_page)}'` alt='cover of previous post')
+          else
+            .cover(style=`background: ${prev.cover || 'var(--default-bg-color)'}`)
+          .pagination-info
+            .label=_p('pagination.prev')
+            .prev_info=prev.title
+          
+    if(next)
+      - var hasPagePrev = prev ? 'pull-right' : 'pull-full'
+      .next-post(class=hasPagePrev)
+        a(href=url_for(next.path) title=next.title)
+          if next.cover_type === 'img'
+            img.cover(src=url_for(next.cover) onerror=`onerror=null;src='${url_for(theme.error_img.post_page)}'` alt='cover of next post')
+          else
+            .cover(style=`background: ${next.cover || 'var(--default-bg-color)'}`)
+          .pagination-info
+            .label=_p('pagination.next')
+            .next_info=next.title
+else
+  nav#pagination
+    .pagination
+      if is_home()
+        - options.format = 'page/%d/#content-inner'
+-     !=paginator(options)
++        !=paginator(icat_options)
++      else
++        !=paginator(options)
++      if is_home()
++        .toPageGroup
++          input#toPageText(maxlength="3" oninput="value=value.replace(/[^0-9]/g,'')" onkeyup="if (this.value === '0') this.value = ''" title="跳转到指定页面")
++          a#toPageButton(data-pjax-state="" onclick="icattoPage.toPage()")
++            i.fa-solid.fa-angles-right
+
+```
+
+2. 新建`[blogRoot]/source/css/pagination.css`，添加如下内容（`注意颜色值的替换`）：
+```css
+.page .layout > .recent-posts .pagination > a:hover {
+    background: #00c4b6;
+}
+/* 翻页按钮悬停颜色 */
+.layout > .recent-posts .pagination > a {
+  border: var(--style-border);
+}
+/* 调整添加原生边框 */
+#pagination .pagination {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page .layout .recent-posts #pagination .pagination .prev {
+  left: 0;
+}
+.page .layout .recent-posts #pagination .pagination .next {
+  right: 0;
+}
+.page .layout .recent-posts #pagination .pagination .prev,
+.page .layout .recent-posts #pagination .pagination .next {
+  position: absolute;
+  margin: 0 0;
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 5.25em;
+  overflow: hidden;
+}
+.page .layout .recent-posts #pagination .pagination .prev:hover .pagination_tips_prev {
+  margin-right: 2.5px;
+  opacity: 1;
+}
+.page .layout .recent-posts #pagination .pagination .prev .pagination_tips_prev {
+  margin-right: -28px;
+  transition: margin-right .3s;
+  opacity: 0;
+}
+.page .layout .recent-posts #pagination .pagination .next:hover .pagination_tips_next {
+  margin-left: 2.5px;
+  opacity: 1;
+}
+.page .layout .recent-posts #pagination .pagination .next .pagination_tips_next {
+  margin-left: -28px;
+  transition: margin-left .3s;
+  opacity: 0;
+}
+@media screen and (max-width: 768px) {
+  .page .layout .recent-posts #pagination .pagination .prev,
+  .page .layout .recent-posts #pagination .pagination .next {
+    position: sticky;
+    margin: 0 6px;
+    display: inline-block;
+    width: 2.5em;
+  }
+  .page .layout .recent-posts #pagination .pagination .prev .pagination_tips_prev,
+  .page .layout .recent-posts #pagination .pagination .next .pagination_tips_next {
+    display: none;
+  }
+}
+/* 上下页按钮魔改 */
+.pagination input {
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 8px;
+  border: var(--style-border-always);
+  transition: all 0.3s;
+  outline-style: none;
+  padding-left: 12px;
+  background: var(--icat-secondbg);
+  color: var(--icat-fontcolor);
+}
+
+.pagination .toPageGroup:hover input,.pagination .toPageGroup input:focus {
+  border: 1px solid #00c4b6;
+  outline-style: none;
+  width: 100px;
+}
+
+.toPageGroup {
+  display: inline-flex !important;
+  position: relative;
+  margin: 0 6px !important;
+}
+
+a#toPageButton {
+  display: flex;
+  position: absolute;
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 8px;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s;
+  background: var(--card-bg);
+  border: var(--style-border-always);
+  cursor: text !important;
+  pointer-events: none;
+}
+
+.toPageGroup:hover a#toPageButton, .toPageGroup:focus-within a#toPageButton {
+  margin-top: 4px;
+  width: 27px;
+  height: 27px;
+  margin-left: 70px;
+  background: var(--icat-card-bg);
+  border: 1px solid var(--icat-none);
+  border-radius: 4px;
+  opacity: 0.2;
+  transition: all 0.3s !important;
+}
+
+.toPageGroup:focus-within a#toPageButton.haveValue {
+  opacity: 1;
+  cursor: pointer;
+}
+
+a#toPageButton.haveValue {
+  opacity: 1!important;
+  cursor: pointer!important;
+  pointer-events: all;
+}
+
+a#toPageButton.haveValue:hover {
+  background: var(--icat-theme);
+  color: var(--icat-white);
+}
+
+@media screen and (max-width: 768px) {
+  .toPageGroup {
+    display: none !important;
+  }
+}
+
+/* 页数跳转按钮 */
+
+```
+
+3. 创建`[blogRoot]/source/js/pagination.js`，添加如下内容：
+```js
+var icattoPage = {
+  toPage: function() {
+      console.log("执行跳转");
+      var e = document.querySelectorAll(".page-number")
+        , t = parseInt(e[e.length - 1].innerHTML)
+        , n = document.getElementById("toPageText")
+        , a = parseInt(n.value);
+      if (!isNaN(a) && a > 0 && "0" !== ("" + a)[0] && a <= t) {
+          var s = 1 == a ? "/" : "/page/" + a + "/#content-inner";
+          document.getElementById("toPageButton").href = s
+      }
+  },
+  listenToPageInputPress() {
+      var e = document.getElementById("toPageText")
+        , t = document.getElementById("toPageButton");
+      e && (e.addEventListener("keydown", (e=>{
+          13 === e.keyCode && (icattoPage.toPage(),
+          pjax.loadUrl(t.href))
+      }
+      )),
+      e.addEventListener("input", (function() {
+          "" === e.value || "0" === e.value ? t.classList.remove("haveValue") : t.classList.add("haveValue");
+          var n = document.querySelectorAll(".page-number")
+            , a = +n[n.length - 1].innerHTML;
+          +document.getElementById("toPageText").value > a && (e.value = a)
+      }
+      )))
+  }
+}
+icattoPage.listenToPageInputPress();
+
+// 自定页数跳转
+
+```
+
+4. 在主题的config文件中引用 `pagination.css` 和 `pagination.js`。
+
+5. 执行三连
+```shell
+hexo clean && hexo g && hexo s
+```
+
+
+{% btn 'https://meuicat.com/blog/62/',查看原文,,block right outline %}
+
+<!-- endtab --> 
+
 {% endtabs %}  
 
 
