Edit:樱井老师的开发课堂

--- a/source/_posts/樱井老师的开发课堂.md
+++ b/source/_posts/樱井老师的开发课堂.md
@@ -203,6 +203,181 @@ swiper_cover: /img/樱井老师的开发课堂/cover01.png
 “恶魔之缶”虽然不完美，但它提供了电子游戏难度调节的全新设计思路，至今依然有学习参考的价值。
 
 
+
+## Let Players Cheat the System 允许合法开挂
+
+`游戏中的“策略”可以被定义为玩家最小化损失(Losses)和最大化收益(Gains)的过程。`
+
+游戏中的策略经常会以某些复杂的形式而构建，所以有时候可以利用系统机制玩出所谓“作弊”的手段。换句话说，就是完全不承担任何损失的情况下获得收益。
+
+- 在黑魂中，站在某个特定位置可以骗敌人自己掉下去摔死。
+
+
+## Falling Sells the Feeling of Flight 飞行操作
+
+如果想在游戏制作过程中营造出在空中自由飞翔的感觉，首先要做的就是加入坠落伤害或是类似的惩罚机制。
+
+大家当然想在那些存在飞行操作的游戏中做出好的手感，但是如果没有和飞行这个动作相左的元素的话，就总会让人觉得少了点什么。在有飞行要素的游戏中，此等“相左”元素即为坠落。
+
+- 在高速移动的作品中，玩家在触发某种条件后会减速。
+
+- 在初代《皇牌空战》中，玩家在飞过海洋的路上会遇到一座特别长的桥梁，大家都想试试从桥下钢架穿过，从桥下成功拉起高度的感觉不要太爽。这种爽感的来源正式动作附带的风险以及成功将其克服的感觉。
+
+- 在《飞天赛车》中，玩家的赛车在冲过特殊坡道后是会飞起来的，这样不光寻找飞行点会很有趣，赛车的能飞与否可让飞行本身的乐趣更上一层楼。
+
+
+`在为作品添加机制的时候也要记得想想与之相反的机制，好比玩家的攻击手段和敌方的攻击手段理应成对出现，风险与回报也正是这相同硬币的两面。`
+
+
+## Do We Really Need Enemies? 敌人存在的意义
+
+除开一些主打故事的以及益智游戏之外，绝大多数游戏里都有玩家需要打败的敌人。
+
+除开个例，多数游戏给予玩家乐趣的方式是先施加，再释放压力。
+
+1. 先制造障碍，障碍即是`压力（Stress）`。
+2. 障碍解除，是为`释放（Relief）`,这时玩家感到浑身轻松。
+3. 接着玩家获得物品或经验奖励，帮助玩家变得更强，此为`成长（Growth）`。
+4. 这样玩家就会对后续展开保持期待，并获得高度的满足感。结果便是移除下一个障碍变得更加轻松，谓之`推进（Progress）`，代表玩家可以进一步地探索作品。
+
+撇开打头阵的压力，剩下三个是让游戏真正变得好玩的要素，但是没有压力就很难做好后三者。
+
+压力是有多种呈现形式的，并不一定非得通过杀敌和游戏机制设计不可。
+
+- 冒险游戏中的主人公和队友可能会深陷危机，这是压力。玩家则可以寻找能够释放这层压力的方式，并通过推进流程本身获得乐趣和愉悦感
+- 购物的需要同样也是一种从施压到解压的过程，设置一些高价物品可以让玩家积累资源并怀有消费它们的期待感。
+
+游戏中是可以没有敌人的，但敌人带来施压和解压过程依旧必不可少，在设计作品时不妨尽可能试着引入成长和推进游戏的要素。
+
+
+## Consider Rewards First 优先考虑奖励元素
+
+游戏是需要在玩家击败敌方以及完成任务后提供奖励或是回报的，尤其是那些战斗占比较大的作品。
+
+现今的游戏奖励可以表现为强化、金钱、经验值、技能点等形式。
+
+回报，总体上讲，是玩家会去投入一款游戏的根本源泉。
+
+像是金钱或分数即为随着游戏推进而不断积累的数值奖励，也需要同步设计对应的消费机制。
+
+如果说一款游戏的消费体验打动不了玩家或者不顺畅，结果同样好不到哪去。
+
+- 素材也是一种可以用数值形式呈现的奖励，玩家收集来的素材能够接着创造新的物件，而游戏必须做到让玩家觉得能从整个过程中受益，且最终获得的物品极具价值，可以说这是一种相当高效的奖励机制。
+- 其他类型奖励还有收集品，比如可用角色或装备。是否允许玩家用所持资源兑换这些收集品也取决于游戏本身的目标。
+
+`奖励机制是让玩家持续玩下去的关键！`
+
+
+## Do Competitive Games Have to Be Complex? 对抗型游戏的复杂度
+
+要想入坑今时今日的对抗性游戏可得要点勇气，不少人都会犹豫，皆因这些游戏机制实在复杂，到了哪怕是看着别人玩都未必能搞懂这类游戏的玩法规则的地步。
+
+有没有办法能让对抗游戏变得简单一点呢？
+
+这里我们代入一下格斗游戏的场景：
+- 如果一个格斗游戏玩家没法移动，且只能使用单一拳击招式的话，这种游戏根本没有“对抗”可言，就是无聊至极的把对面按到死罢了。
+- 于是我们加入了“走动”，这样就往对局中引入了“距离”的概念，但这还不够。
+- 那么接着让玩家拳脚相交，亦能让踢技的硬直时间比拳头更长，踢技失误后对面还能还手。
+- 再继续引入跳跃、防御、投技，每一点都可以让游戏的深度更上一层楼。
+
+在对抗格斗类游戏兴起之初，这类游戏的操作空间比起同时期的其他街机要来的更多，也就是所谓的“更有深度”。
+
+招式绝对不是简简单单的出拳踢脚就罢了。将格斗游戏这个类型发扬光大的作品是《街霸2》，本作正是在对决设计上下了一番功夫，而其中诸多招式的特定使用规则更是让本作的游玩深度倍增。
+
+当然这不意味着什么游戏都得把深度做到这种程度，只要广大玩家玩得开心就没问题。
+
+不过如果想让游戏系统经得起长期推敲的话，其机制势必存在一定的复杂度。但至于这深度和广度的度在哪里，其实很难说。
+
+其实某种程度上说，游戏的复杂性这事没法避免，但还是不要把习惯视为理所当然的好。
+
+
+## Game Essence in Falling-Block Puzzle Games 下落消除型游戏的游戏性
+
+市面上有不少类型的益智游戏，尽管说拼图类游戏并不存在任何博弈元素，而益智游戏的乐趣多源于“消除”的成就感。
+
+《俄罗斯方块》理念最初来自于一种叫做“五联骨牌”的益智桌游，这款桌游需要玩家将12块形状各异的图块拼成一个完整的长方形。但和拼图游戏类似，五联骨牌也毫无游戏性可言。然而俄罗斯方块却有不少，产生差别的原因自然是因为后者存在风险与回报。
+
+- 下落消除型益智游戏的风险源自不断垒高的方块，垒得越高，自身思考的时间就越少。
+- 相应的，玩家将方块消除即可减缓风险。要想一次性消除很多方块，玩家就得将自己置于险境之中，因此带来更强烈的满足感。
+- 此外，游戏中方块的下落速度亦会随着时间推移变得越来越快，这样同样能增强风险，也让游戏过程更加刺激。
+- 后续的俄罗斯方块还增加了一项机制，即玩家可以在方块落地后继续旋转和平移方块。这一点非常重要，皆因这种在刀尖上起舞的操作赋予了游戏更高一层的风险。
+
+
+消除解谜游戏非常简单直观，这就让这类游戏性同样十分好懂，设计这种游戏切勿只是从“消除方块”着手，相反应该去思考消除之所以有趣的原因。
+
+只要能够理解游戏性的准则，就算是面对自己不擅长的类型也能很快完成构思。
+
+
+## Dying Comes as a Relief? 败北带来的快感
+
+据某个海外的研究显示，人们在对抗型 FPS 游戏里击杀对手后会十分焦虑，反倒是在被击杀时会感到轻松。
+
+1. 首先，角色可以不作为强调对象。
+    - 想象角色死亡时的情景，如果游戏去强调角色本身的话，那每死一次都会让玩家心生不悦，但这并非此类游戏的实际情况。
+
+2. 其次，失望情绪可以运用游戏规则扫清。
+    - 不管是时间持续推进还是重新开新对局，只要能比较迅速的重新开启对局，玩家就可以接着玩下去，因为没有拿来沮丧的时间。
+
+3. 最后，击败对方或许算不上一种回报。
+    - 玩家的终极目标是获得胜利，如果打败的对手无法终结掉对局，目标便仍未达成，也就是说还不能放松。击败对手某种程度上也会向玩家展示一下自身被击败的样子。
+
+
+不论玩家是击败了对手还是身为败北的一方，只要这些瞬间的乐趣能够打动玩家，那么它们就是最棒的娱乐消遣。
+
+制作游戏时一定要仔细考虑这些方面，也包括如何让玩家失利后依旧继续游戏。
+
+
+## Mountain Climbing Is More Than Just Climbing 有峰有谷的难度曲线
+
+在角色扮演以及其他一些含有角色成长要素的游戏里，需要在愈发难以对付的敌人和障碍中平衡好玩家的强度。
+
+理想的玩家和敌人难度曲线应该是路途中要有峰有谷，过程中需要克服一定量的挑战，也会有一些平地供人休息。
+
+一般来说，挑战通常都分布在 BOSS 战附近。`BOSS 不应该只是杂兵的加强版，相反 BOSS 战应该能迫使玩家形成对策，并且玩家在打过 BOSS 后也需要拿到与之匹配的丰厚奖励。`
+
+如果一个游戏的系统是敌人会和玩家同步强化，那么玩家推进游戏的动力将大打折扣，解决这种问题有多种不同办法，但任何办法都要为有趣对策留足生存空间。
+
+
+
+## Make Retries Quick 落败重试一定要快
+
+假设玩家在游戏里死亡了，需要重来，虽说具体还是根据游戏的总体目标和游戏性来定，但一般来说肯定是尽可能迅速要来得更好。
+
+重开得快，玩家也就更有可能再次尝试而非直接放弃。试着减少让玩家感到无所事事的时间长度，让演出更加紧凑，读取时间也一定要短。
+
+以重试来说，就其所带来的惩罚以及玩家需要重走流程量的内容度而言，也会影响玩家是否继续坚持玩下去，但最重要的还得数这一点：重开一定要快！
+
+重开够快便能提升玩家对游戏难度和受阻之处的容忍度。
+
+一味推进游戏并不足以让玩家一直保持兴致，关键是要让人上手操作。做到这点可以简单到让玩家按个键读读屏幕上的信息，但最好的办法莫过于尽快让人重新上手去玩。
+
+要让玩家在失利的时候有切身实感，可以把失利时的效果做的浮夸而有力，但记得弄完就赶紧翻篇。这个效果的具体时长还是取决于游戏类型，不过应以 1~4 秒为主，再长就不太好了。并且演出效果放完后就赶紧让人上手操作，还要确保玩家不会一重开就被敌人弄死。
+
+## Is Your Game Appealing Enough to Start Over? 作品是否有值得反复落败的魅力
+
+受《恶魔之魂》《黑暗之魂》等魂类游戏大热的影响，从2010年代后期开始，高难度游戏的数量越发增多。这类游戏会互相影响，并进一步带热这股风潮。尤其可以指出的是那些有着角色会永久死亡及类似机制的游戏，也就是游戏失败就得从头再来，这种机制可谓构成 Rougelike 和 Rougelite 类游戏的核心。
+
+Rougelike: 总的来说，是一类地图和道具随机生成，且死亡后从头开始的游戏。早期的 PC 游戏里有一个叫 Rouge 的作品，这个词就是从这来的。
+
+Rougelite: 只包含了部分 Rouge 元素。和原版 Rouge 类型不同的那些动作类作品应该是 Rougelite，这类游戏所包含的十分灵活的动作和表现形式让它们玩起来颇具爽感，与此同时随机的装备，道具还有事件又会给每局游戏带来不同的体验。
+
+类似 Rouge 的游戏就是 Rougelike，而仅仅只借鉴部分要素的就属于 Roguelite 。然后之其中的区别只有在提到 Rougelite 概念的时候才成立，所以把这类游戏统称 “Rougelike” 也无不妥。
+
+死了就要重开这种机制其实非常适合独立游戏，游戏说到底本就已经需要重复劳作，那么有了这个机制，独立游戏就无须去做那么多的素材了，是件好事。
+
+不过如果仔细想想，绝大多数玩家肯定不会喜欢一遍遍的从头开始并无限重复相同的内容。对于想要推进的人而言，他们更需要的是驱动力。动力一般来说即为想看接下来发展的感觉，但为了引出这点期望，需要给玩家一点能够期盼的盼头。换句话说，游戏本身要有足够的吸引力，如此方可吸引玩家继续推进。要是新引力不足或是变化不足，玩家就不会想进行重复的劳作。
+
+![Alt text](../img/%E6%A8%B1%E4%BA%95%E8%80%81%E5%B8%88%E7%9A%84%E5%BC%80%E5%8F%91%E8%AF%BE%E5%A0%82/%E4%BD%9C%E5%93%81%E6%98%AF%E5%90%A6%E6%9C%89%E5%80%BC%E5%BE%97%E5%8F%8D%E5%A4%8D%E8%90%BD%E8%B4%A5%E7%9A%84%E9%AD%85%E5%8A%9B/1690726580787.png)
+
+那我们又该怎样推出可以推动玩家前进的要素呢？
+
+这就完全取决于游戏的体量，剧情讲述方式，以及填充内容的方式了。
+
+`身为游戏创作者，去思考自己作品能给到玩家怎样的吸引力会很有好处，尤其应该试着去思考玩家对于反复游玩同一块内容的感受。`
+
+
+
+
 # Planning & Game Design 企划和游戏设计
 
 
