add game design theory

--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -25,6 +25,7 @@ hidden: false
 | hexo-douban-card | 1.4.0 | [在文章中插入豆瓣卡片](https://github.com/TankNee/hexo-douban-card) |
 | hexo-tag-steamgame | 1.0.0 | [在文章中插入steam游戏](https://github.com/HCLonely/hexo-tag-steamgame) |
 | hexo-sakana | 1.0.2 | [「Sakana! Widget」](https://github.com/MingxuanGame/hexo-sakana) |
+| hexo-sliding-spoiler | 1.2.1 | [文章折叠栏](https://github.com/fletchto99/hexo-sliding-spoiler)|
 
 
 
