修改部分内容

--- a/source/_posts/游戏设计基础理论.md
+++ b/source/_posts/游戏设计基础理论.md
@@ -9,7 +9,7 @@ date: 2024-03-14 15:04:53
 description:
 cover: /img/游戏设计基础理论/cover.png
 ---
-> 鉴于工作中的需求，一些个人认为有趣的想法的设计与验证需要一些通用理论作为支撑，由此想着将一些适用面广泛且有效的理论整理于此，方便查阅。
+> 鉴于工作中的需求，一些个人认为有趣的想法与设计需要一些通用理论作为支撑，由此想着将一些适用面广泛且有效的理论整理于此，方便查阅。
 
 {% spoiler "风险与回报" %}
 
