--- a/source/_posts/主题修改记录.md
+++ b/source/_posts/主题修改记录.md
@@ -15,7 +15,14 @@ hidden: false
 建议在自己博客的`\source`目录下新建`\css`和`\js`文件夹用来存放相关的效果脚本，  
 最终部署的时候会和`\themes\butterfly\source`目录下的资源进行合并，引用路径都是一样的，无须担心。
 
-## 插件使用  
+## 插件使用
+```bash
+# 安装插件
+npm install <plugin-name> --save
+
+# 卸载插件
+npm uninstall <plugin-name>
+```
 | 插件名称 | 版本 | 作用 |
 | :------: | :----------: | :----------: |
 | hexo-abbrlink | 2.2.1 | 为文章生成字母和数字组成的唯一ID,代替默认的日期生成 |
@@ -24,7 +31,6 @@ hidden: false
 | hexo-douban | 2.1.7 | [豆瓣个人页面](https://github.com/mythsman/hexo-douban) |
 | hexo-douban-card | 1.4.0 | [在文章中插入豆瓣卡片](https://github.com/TankNee/hexo-douban-card) |
 | hexo-tag-steamgame | 1.0.0 | [在文章中插入steam游戏](https://github.com/HCLonely/hexo-tag-steamgame) |
-| hexo-sakana | 1.0.2 | [「Sakana! Widget」](https://github.com/MingxuanGame/hexo-sakana) |
 
 
 
